# deployer

./: .gitignore  LICENSE  pyproject.toml
configs/: config.toml
src/deploy/: .gitignore  cli.py  config.py  logger.py
