[tool.poetry]
name = "deploy"
version = "0.1.0"
description = "Deploy - Open-Source AI Implementation Toolkit"
authors = ["stag-hh <hiran@stag-ai.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
click = ">=8.1.8,<9.0.0"
loguru = "^0.7.3"
toml = "^0.10.2"

[tool.poetry.scripts]
deploy = "deploy.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
